# fastapi-boilerplate

./: .dockerignore  .env.template  .gitignore  .pylintrc  Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  tox.ini
.infra/helm/: values.yaml
.infra/helm/templates/00-postgres/: deployment.yaml  pvc.yaml  service.yaml
.infra/helm/templates/01-app/: deployment.yaml  ingress.yaml  service.yaml
migrations/: env.py
src/: app.py  dependencies.py  engine.py  jaeger.py  routes.py  settings.py
src/db/: public.py
src/middlewares/: metrics.py
src/settings/: __init__.py  app.py  db.py  jaeger.py  log.py  s3.py
src/views/: common.py
tests/: conftest.py  test_common.py
