[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alexander Molofeev <alexandr.nino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24.0"

# fastapi deps
uvicorn = "^0.12.1"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
fastapi = "^0.61.1"
python-multipart = "^0.0.5"
websockets = "^8.1"

# pg deps
aiopg = "^1.1.0"
sqlalchemy = "^1.4.2"
SQLAlchemy-JSONField = "^0.9.0"
alembic = "^1.4.3"

# dev & test dependencies
isort = "^5.6.2"
pytest = "^5.2"
pylint = "^2.6.0"
mypy = "^0.790"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
pytest-aiohttp = "^0.3.0"
pytest-freezegun = "^0.4.2"
python-dotenv = "^0.14.0"
sqlalchemy-stubs = "^0.3"
nest-asyncio = "^1.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="hug"
src_paths = ["tests", "src"]
line_length = 100
multi_line_output = 2
include_trailing_comma = true
