[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alexander Molofeev <alexandr.nino@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="hug"
src_paths = ["tests", "src"]
line_length = 100
multi_line_output = 2
include_trailing_comma = true
